* lots of performance improvements
* fixed removal of relationship entities
* added a GraphDatabase abstraction to be used with Neo4jTemplate
* Neo4jTemplate API udpates
* added aspect-introduced methods to NodeBacked and RelationshipBacked interfaces (with javadocs)
* removed fullIndex annotation attribute
* many documentation updates


Changes in version 1.0.0.M5 (2011-03-25)
----------------------------------------

* fixed docbook build to include images
* added tutorial section to book
* clarified in documentation what AspectJ does
* fail on startup if transaction manager is misconfigured
* fail early at runtime if 1:N field is missing the RelatedTo.elementClass
* added new default NodeTypeStrategy based on indexing
* fixed Bacon path issue in IMDB example
* fixed bug with stale EntityManagers in a cross-store scenario
* @NodeEntities are no longer @Configurable
* update to Neo4j 1.3.M05, AspectJ 1.6.11.RELEASE
* better integration support for Neo4j Server unmanaged extensions
* made type attribute of @RelatedTo optional
* many performance improvements
* ability to register StateBackedCreators to NodeEntityInstantiator to forgo instantiation via reflection
* fixed test context leakage into other tests via aspects, added cleaning TestExecutionListener


Changes in version 1.0.0.M4 (2011-03-15)
----------------------------------------

* update to Neo4j-1.3.M04
* simplification of detached/attached state
* all node entities are detached at creation, must call persist()
* attach() renamed to persist()
* separate indices per domain class
* support for fulltext indices
* fixed direct lookup of numerically indexed values
* relationships via relateTo are now also restricted to one per type,direction and target
* added EntityPath/EntityPathMapper for entity based Neo4jTemplate callbacks
* added EntityEvaluator for entity based path evaluation
* error handling for node type strategy called on non type nodes