@@ -17,10 +17,10 @@
 package org.springframework.data.graph.neo4j;
 
 
-import org.springframework.data.annotation.Indexed;
 import org.springframework.data.graph.annotation.EndNode;
 import org.springframework.data.graph.annotation.RelationshipEntity;
 import org.springframework.data.graph.annotation.StartNode;
+import org.springframework.data.graph.neo4j.annotation.Indexed;
 
 import java.util.Date;
 
