@@ -20,7 +20,6 @@ import org.neo4j.graphdb.DynamicRelationshipType;
 import org.neo4j.graphdb.traversal.TraversalDescription;
 import org.neo4j.kernel.Traversal;
 import org.neo4j.kernel.impl.traversal.TraversalDescriptionImpl;
-import org.springframework.data.annotation.Indexed;
 import org.springframework.data.graph.*;
 import org.springframework.data.graph.annotation.GraphProperty;
 import org.springframework.data.graph.annotation.GraphTraversal;
@@ -30,6 +29,8 @@ import org.springframework.data.graph.core.Direction;
 import org.springframework.data.graph.core.FieldTraversalDescriptionBuilder;
 import org.springframework.data.graph.core.NodeBacked;
 import org.springframework.data.graph.neo4j.Person;
+import org.springframework.data.graph.neo4j.annotation.Indexed;
+
 import static org.springframework.data.graph.neo4j.Person.persistedPerson;
 import static org.springframework.data.graph.neo4j.Person.persistedPerson;
 
