@@ -16,9 +16,9 @@
 
 package org.springframework.data.graph.neo4j.partial;
 
-import org.springframework.data.annotation.Indexed;
 import org.springframework.data.graph.annotation.GraphProperty;
 import org.springframework.data.graph.annotation.NodeEntity;
+import org.springframework.data.graph.neo4j.annotation.Indexed;
 
 import javax.persistence.*;
 
