@@ -44,6 +44,7 @@
 			<includes>
 				<include>org.springframework.data:spring-data-graph-core</include>
 				<include>org.springframework.data:spring-data-neo4j</include>
+				<include>org.springframework.data:spring-data-neo4j-rest</include>
 			</includes>
 			<binaries>
 				<outputDirectory>dist</outputDirectory>
@@ -57,6 +58,7 @@
 			<includes>
 				<include>org.springframework.data:spring-data-graph-core</include>
 				<include>org.springframework.data:spring-data-neo4j</include>
+				<include>org.springframework.data:spring-data-neo4j-rest</include>
 			</includes>
 			<binaries>
 				<attachmentClassifier>sources</attachmentClassifier>
