@@ -15,6 +15,7 @@ Changes in version 1.0.0.RC1 (2011-04-04)
 * Neo4jTemplate API udpates
 * added aspect-introduced methods to NodeBacked and RelationshipBacked interfaces (with javadocs)
 * removed fullIndex annotation attribute
+* moved @Indexed annotation to org.springframework.data.graph.neo4j.annotation package
 * many documentation updates
 
 
